--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,11 @@
         "app/src/app/app.ts",
         "app/src/main.ts",
         "app/src/repositories/base/base.repo.ts",
+        "app/src/repositories/readit/readit.repo.ts",
         "app/src/services/base/base.svc.ts",
+        "app/src/services/readit/readit.svc.ts",
         "app/src/viewcontrols/base/base.vc.ts",
-        "app/src/viewcontrols/home/home.vc.ts"
+        "app/src/viewcontrols/home/home.vc.ts",
+        "app/src/viewcontrols/singlepost/singlepost.vc.ts"
     ]
 }
